# api-gateway

./: .env  alembic.ini  dependencies.py  main.py  readme.md  requirements.txt  setup.py  utils.py
alembic/: env.py
alembic/versions/: 43f620975e64_pass_delete.py  649975b2edb3_create_utilisateur_table.py  f42b6b997a83_enums_deletion.py
api/: dependencies.py  router.py
api/endpoints/: auth.py  proxy.py  users.py
app/api/: user_controller.py
app/config/: create_tables.py  database.py
app/models/: user.py
app/models/enums/: enum.py
app/repositories/: user_repo.py
app/schemas/: user_schema.py
config/: settings.py
custom_keycloak_app/: pyproject.toml
custom_keycloak_app/custom_kaycloak_app/: auth_utils.py  config.py  middleware.py  roles.py
keycloak_auth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/: keycloak.py  sync.py
